@@ -66,10 +66,7 @@
 "1px"
 "2"
 "3DBD89EB-CEFB-4ddb-8D1A-5BE47ED4E929"
-"419"
 "420+"
-"422"
-"5242880"
 "5CACD637-F82F-491F-947A-5DCA38AA0FEA"
 "6EB8D98F-2723-4472-88D3-5936F9D6E631"
 "7"
@@ -112,10 +109,11 @@
 "DOCBASE"
 "DOMSVGElement"
 "DYLD_FRAMEWORK_PATH"
+"DeleteBackward"
+"DeleteForward"
 "DeleteWordBackward"
 "DeleteWordForward"
 "FD3B2381-0BB6-4B59-AF09-0E599C8901CF"
-"ForwardDelete"
 "FrameName"
 "GroupName"
 "HIDictionaryWindowShow"
@@ -135,7 +133,6 @@
 "ImmReleaseContext"
 "ImmSetCandidateWindow"
 "ImmSetOpenStatus"
-"IncludeDebugMenu"
 "InsertBacktab"
 "InsertNewline"
 "InsertTab"
@@ -198,7 +195,6 @@
 "SAMILang"
 "SAMIStyle"
 "Safari.exe"
-"Safari/419.3"
 "Times"
 "ToggleBold"
 "ToggleItalic"
@@ -403,7 +399,6 @@
 "en"
 "estimatedProgress"
 "file:"
-"flickr.com"
 "ftp:"
 "htm"
 "html"
@@ -418,6 +413,7 @@
 "image/svg+xml"
 "image/tiff"
 "img"
+"insertText:"
 "isLoading"
 "isindex"
 "javascript:"
@@ -474,7 +470,6 @@
 "x"
 "x-apple-web-kit/"
 "xml"
-"yahoo.com"
 "~/Library/Icons"
 "~/Library/WebKit/Databases"
 WebKit/mac/DOM/WebDOMOperations.mm:"background"
@@ -550,7 +545,6 @@ WebKit/mac/WebView/WebPreferenceKeysPrivate.h
 WebKit/mac/WebView/WebPreferences.m
 WebKit/mac/WebView/WebView.mm:"Preferences"
 WebKit/mac/WebView/WebView.mm:"Search With Google"
-WebKit/mac/WebView/WebView.mm:"Show DOM Tree"
 WebKit/mac/WebView/WebView.mm:"control"
 WebKit/mac/WebView/WebView.mm:"return "
 WebKit/win/ProgIDMacros.h:"OpenSource"
