@@ -1,3 +1,12 @@
+2008-01-23  Steve Falkenburg  <sfalken@apple.com>
+
+        Update localization exceptions.
+        
+        Reviewed by Darin.
+
+        * English.lproj/Localizable.strings:
+        * StringsNotToBeLocalized.txt:
+
 2008-01-20  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Dan Bernstein.
