@@ -1,3 +1,13 @@
+2008-01-23  Steve Falkenburg  <sfalken@apple.com>
+
+        <rdar://problem/5699509> Allow file upload dialog to be localized.
+
+        Reviewed by Darin.
+
+        * platform/LocalizedStrings.h:
+        * platform/win/FileChooserWin.cpp:
+        (WebCore::FileChooser::openFileChooser):
+
 2008-01-23  Adam Roben  <aroben@apple.com>
 
         Fix behavior of type-to-select in <select> menus
